--- a/css/style.css
+++ b/css/style.css
@@ -8,34 +8,65 @@ body {
     font-family: Arial, sans-serif;
     color: black;
     background-color: white;
+    min-height: 100vh;
+    display: grid;
+    grid-template-areas: 
+     "header"
+     "main"
+     "footer";
+     grid-template-rows: auto, 1fr, auto;
 }
 
 .container {
-
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .rubrik-text{
-    font-family: Times, serif
+  font-family: Times, serif;
+  font-weight: bold;
+  
 
 
 }
+
+
+
+
+a {
+    text-decoration: none;
+    color: orange;
+}
+
+
+
+
+
+/* Header och Nav */ 
+
 .header {
-    background-color: brown;
+  background-color: brown;
+  color: white;
+  text-align: center;
 
 }
 
-.section {
-    
+header .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.nav {
-width: 100%;
-height: auto;
-background-color: brown;
+.hamburger-button{
+    cursor: pointer;
+    background: none;
+    border: none;
 }
 
-.nav.active {
-    left: 0;
+.hamburger-button i.material-icons{
+    font-size: 2.5rem;
 }
 
 .overlay{
@@ -46,23 +77,61 @@ background-color: brown;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
     display: none;
-    z-index: 5;
+    z-index: 1;
 }
 
 .overlay.active{
     display: block;
 }
 
-a {
-    text-decoration: none;
-    color: orange;
+
+.main-nav {
+    position: fixed;
+    top: 0;
+    right: -40vw;
+    width: 40vw;
+    height: 100vh;
+    background-color: brown;
+    z-index: 2;
+    transition: right 0.3s;
+    box-shadow: -5px 0px 15px 8px rgba(0,0,0,0.5);
 }
 
-.menu-button{
-    cursor: pointer;
-    display: inline;
+
+.main-nav.active {
+    right: 0vw;
 }
 
-.menu-button i.material-icons{
-    font-size: 2.5rem;
+
+.main-nav ul {
+    list-style: none;
+    padding: 2rem 1rem;
+}
+
+
+
+/* main */
+
+.section {
+    
+}
+
+
+/* footer */
+
+
+@media (min-width: 500px) {
+
+
+    body {
+        grid-template-areas: 
+        "header"
+        "nav"
+        "main"
+        "footer";
+    }
+
+
+
+
 }
