--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ section {
 
 header {
     grid-area: header;
-    background-color: brown;
+    background-color: #6d4c41;
     color: white;
     text-align: center;
     padding: 1rem 0;
@@ -112,7 +112,7 @@ header .container {
     right: -40vw;
     width: 40vw;
     height: 100vh;
-    background-color: brown;
+    background-color: #6d4c41;
     z-index: 2;
     transition: right 0.3s;
     box-shadow: -5px 0px 15px 8px rgba(0, 0, 0, 0.5);
@@ -199,6 +199,7 @@ body.home-page .hours-section {
     border: none;
     border-radius: 4px;
     margin-top: 1rem;
+    cursor: pointer;
 }
 
 
@@ -380,7 +381,8 @@ body.order-page main {
     grid-template-areas:
         "header"
         "products"
-        "form";
+        "form"
+        "notes";
     grid-template-columns: 1fr;
     gap: 2rem;
 }
@@ -389,12 +391,52 @@ body.order-page .page-header {
     grid-area: header;
 }
 
-body.order-page .form-section {
+body.order-page .products-section {
     grid-area: products;
 }
 
-body.order-page .products-section {
+body.order-page .form-section {
     grid-area: form;
+}
+
+body.order-page .notes-section {
+    grid-area: notes;
+}
+
+.order-form {
+    background-color: yellow;
+    border-radius: 8px;
+    padding: 1.5rem;
+    box-shadow: ;
+    margin-top: 1rem;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+label {
+    display: block;
+    margin-bottom: 0.5rem;
+}
+
+input[type="text"], 
+input[type="number"], 
+input[type="email"], 
+textarea {
+    width: 100%;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+.notes-section ul {
+  padding-left: 1.5rem;
+  margin-top: 1rem;
+}
+
+.notes-section li {
+  margin-bottom: 0.5rem;
 }
 
 .product-info {
@@ -429,6 +471,10 @@ body.order-page .products-section {
         grid-template-columns: 3fr 2fr;
     }
 
+    .card-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
     .hamburger-button {
         display: none;
     }
@@ -438,7 +484,7 @@ body.order-page .products-section {
         grid-area: nav;
         width: 100%;
         height: auto;
-        background-color: brown;
+        background-color: #6d4c41;
         box-shadow: none;
     }
 
@@ -446,6 +492,11 @@ body.order-page .products-section {
         display: flex;
         justify-content: center;
         padding: 0;
+    }
+
+    .main-nav a {
+        padding: 0.5rem 1rem;
+        margin: 0 0.25rem;
     }
 
     header .container {
