--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ section {
 
 header {
     grid-area: header;
-    background-color: #6d4c41;
+    background-color: #472E26;
     color: white;
     text-align: center;
     padding: 1rem 0;
@@ -112,7 +112,7 @@ header .container {
     right: -40vw;
     width: 40vw;
     height: 100vh;
-    background-color: #6d4c41;
+    background-color: #472E26;
     z-index: 2;
     transition: right 0.3s;
     box-shadow: -5px 0px 15px 8px rgba(0, 0, 0, 0.5);
@@ -139,7 +139,8 @@ header .container {
 
 .main-nav a.active,
 .main-nav a:hover {
-    background-color: gray;
+    background-color: #6d4c41;
+    transition: 0.3s;
 }
 
 /* main */
@@ -185,7 +186,7 @@ body.home-page .hours-section {
 
 /* Banner */
 .banner {
-    background-color: #a1887f;
+    background-color: #6d4c41;
     color: white;
     text-align: center;
     padding: 3rem 0;
@@ -197,19 +198,19 @@ body.home-page .hours-section {
 
 .btn {
     display: inline-block;
-    background-color: #6d4c41;
+    background-color: #472E26;
     color: white;
     padding: 0.8rem 1.5rem;
     border: none;
     border-radius: 4px;
     margin-top: 1rem;
     cursor: pointer;
-    transition: background-color 1s ease; 
+    transition: background-color 0.3s ease; 
 
 }
 
 .btn:hover {
-    background-color: #5d4037;
+    background-color: #3B1F1A;
 }
 
 /* Kortdelen */
@@ -225,6 +226,11 @@ body.home-page .hours-section {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     border: 2px solid #6d4c41;
+    transition: 0.3s ease-in-out;
+}
+
+.card:hover{
+    transform: translateY(-10px);
 }
 
 .card img {
@@ -501,7 +507,7 @@ textarea {
         grid-area: nav;
         width: 100%;
         height: auto;
-        background-color: #6d4c41;
+        background-color: #472E26;
         box-shadow: none;
     }
 
