--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,9 @@ body {
 
 /* Skrift */
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     margin-bottom: 1rem;
     color: #6d4c41;
 }
@@ -107,9 +109,9 @@ header .container {
 
 
 .main-nav {
+    right: -40vw;
     position: fixed;
     top: 0;
-    right: -40vw;
     width: 40vw;
     height: 100vh;
     background-color: #472E26;
@@ -192,8 +194,9 @@ body.home-page .hours-section {
     padding: 3rem 0;
 }
 
-.banner h1, .banner p{
-    color:white;
+.banner h1,
+.banner p {
+    color: white;
 }
 
 .btn {
@@ -205,7 +208,7 @@ body.home-page .hours-section {
     border-radius: 4px;
     margin-top: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s ease; 
+    transition: background-color 0.3s ease;
 
 }
 
@@ -229,7 +232,7 @@ body.home-page .hours-section {
     transition: 0.3s ease-in-out;
 }
 
-.card:hover{
+.card:hover {
     transform: translateY(-10px);
 }
 
@@ -331,7 +334,7 @@ body.calendar-page .events-section {
     width: 100%;
     table-layout: fixed;
     border-spacing: 0;
-    background-color: white ;
+    background-color: white;
     margin-bottom: 2rem;
     border-collapse: collapse;
     overflow: hidden;
@@ -436,9 +439,10 @@ label {
     margin-bottom: 0.5rem;
 }
 
-input[type="text"], 
-input[type="number"], 
-input[type="email"], 
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="tel"],
 textarea {
     width: 100%;
     padding: 1rem;
@@ -447,16 +451,16 @@ textarea {
 }
 
 .notes-section ul {
-  padding-left: 1.5rem;
-  margin-top: 1rem;
+    padding-left: 1.5rem;
+    margin-top: 1rem;
 }
 
 .notes-section li {
-  margin-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .product-info {
-    padding: 0 rem;
+    padding: 0;
 }
 
 
@@ -533,7 +537,7 @@ textarea {
     }
 
     body.calendar-page .page-header .container {
-        margin: 1rem 0 0 4rem ;
+        margin: 1rem 0 0 4rem;
     }
 
 }
